--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,10 @@ body {
   width: 80%;
   height: 100%;
 }
+h1{
+  text-align: center;
+  text-shadow: 5px 3px 10px rgba(0, 0, 0, 0.1);
+}
 li {
   list-style: none;
 }
@@ -172,7 +176,7 @@ header .container .explore a:hover:before {
 .quest .squar img {
   width: 400px;
 }
-.quest h1 {
+.quest > h1 {
   text-align: center;
   text-shadow: 5px 3px 10px rgba(0, 0, 0, 0.1);
 }
@@ -275,3 +279,102 @@ header .container .explore a:hover:before {
   );
 }
 /* end quest design */
+/* start gallery design */
+.gallery {
+  width: 100%;
+  height: auto;
+  margin-top: 40px;
+}
+.gallery > h1 {
+  position:relative;
+  margin:40px 0;
+  color:white;
+  text-shadow: 5px 3px 10px rgba(0, 0, 0, 0.3);
+}
+.gallery > h1::before {
+  position: absolute;
+  content: " ";
+  background-image: url(../images/Asset\ 1-8.png);
+  background-size: cover;
+  top: -65px;
+  right: 40%;
+  width: 270px;
+  height: 150px;
+  z-index: -1;
+  border-radius: 10px;
+}
+.gallery .container {
+  width: 80%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 40px;
+}
+.gallery .container .gall {
+  width: 100%;
+  height: 450px;
+  border-radius:10px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  background-color: transparent;
+  perspective: 1000px;
+}
+.gallery .container .gall .card {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+}
+
+.gallery .container .gall:focus {
+    outline: 0;
+}
+
+.gallery .container .gall:hover .card,
+.gallery .container .gall:focus .card{
+  transform: rotateY(180deg);
+}
+.gallery .container .gall .card .front img{
+  height: 100%;
+}
+.gallery .container .gall .card .front,
+.gallery .container .gall .card .back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+
+}
+
+.gallery .container .gall .card .front {
+  background: linear-gradient(to left, #4364f7, #6fb1fc);
+  color: black;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.gallery .container .gall .card .back {
+  background: linear-gradient(to right, #4364f7, #6fb1fc);
+  color: white;
+  transform: rotateY(180deg);
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+/* end gallery design */
