--- a/css/style.css
+++ b/css/style.css
@@ -22,13 +22,11 @@ a {
   text-decoration: none;
   font-weight: 600;
   font-size: 22px;
-  color: white;
   transition: 0.3s;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
   -ms-transition: 0.3s;
   -o-transition: 0.3s;
-  text-shadow: 1px 1px 20px rgba(0, 0, 0, 0.3);
 }
 /* start variables */
 :root {
@@ -36,8 +34,7 @@ a {
   --secondary-color: #52d3d8;
   --thrd-color: #e26ee5;
   --frth-color: #1d214e;
-  --main-font:"Roboto", sans-serif;
-  ;
+  --main-font: "Roboto", sans-serif;
 }
 /* end variables */
 /* end global rules */
@@ -62,7 +59,7 @@ header .container nav {
 }
 header .container nav a {
   text-decoration: none;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 22px;
   color: white;
   transition: 0.3s;
@@ -98,7 +95,7 @@ header .container .text h1 {
 header .container .text a {
   display: grid;
   place-items: center;
-  background-color:var(--thrd-color) ;
+  background-color: var(--thrd-color);
   margin-top: 40px;
   width: 200px;
   height: 50px;
@@ -106,14 +103,14 @@ header .container .text a {
   left: 100%;
   transform: translateX(-100%);
 }
-header .container .text a:hover{
+header .container .text a:hover {
   background-color: var(--secondary-color);
   width: 210px;
   height: 52.5px;
 }
 /* end header design */
 /* start question design */
-.question{
+.question {
   background-image: url(../images/question-background-1.png);
   background-size: 85%;
   background-repeat: no-repeat;
@@ -129,7 +126,7 @@ header .container .text a:hover{
   display: grid;
   place-items: center flex-start;
 }
-.question .container .text{
+.question .container .text {
   position: relative;
   bottom: 0;
   width: 60%;
@@ -140,7 +137,7 @@ header .container .text a:hover{
   color: var(--main-color);
   font-size: 55px;
 }
-.question .container .text p{
+.question .container .text p {
   line-height: 2.5;
   margin-top: 10px;
   color: white;
@@ -152,3 +149,186 @@ header .container .text a:hover{
   font-weight: 500;
 }
 /* end question design */
+/* start products design */
+.products {
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.products .container {
+  height: calc(100% - 100px);
+  display: grid;
+  gap: 30px 60px;
+  align-items: center;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+}
+.products > h1 {
+  width: 100%;
+  height: 100px;
+  color: white;
+  text-align: center;
+  margin: 20px;
+  position: relative;
+  display: grid;
+  place-items: center;
+}
+.products > h1::before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-image: url(../images/befor.png);
+  background-size: 270px;
+  background-position-x: 0px;
+  background-repeat: no-repeat;
+  left: 50%;
+  top: 10%;
+  transform: translateX(-10%);
+  z-index: -1;
+}
+.products .container .pruduit {
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  gap: 10px;
+  height: 100%;
+  width: 100%;
+}
+.products .container .pruduit .image {
+  grid-row-start: 1;
+  align-items: center;
+  display: grid;
+  grid-row-end: 4;
+  overflow: hidden;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
+.products .container .pruduit .image img {
+  height: 410px;
+  width: 100%;
+}
+.products .container .pruduit .link {
+  display: grid;
+  place-items: center;
+}
+.products .container .pruduit .link a {
+  display: grid;
+  color: white;
+  place-items: center;
+  background-color: var(--secondary-color);
+  margin: 0 auto;
+  width: 200px;
+  height: 50px;
+  box-shadow: 5px 5px 0 white, 10px 10px 0 var(--thrd-color);
+}
+.products .container .pruduit .link a:hover {
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
+/* end products design */
+/* start gallery design */
+.gallery {
+  width: 100%;
+  height: 800px;
+  background-image: url(../images/gallery.jpg);
+  background-size: 100% auto;
+
+  margin-top: 80px;
+  background-position: bottom;
+}
+.gallery .container {
+  height: 90%;
+  display: grid;
+  place-items: center;
+}
+.gallery .container h1 {
+  font-size: 70px;
+  color: white;
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+}
+/* end gallery design */
+/* start contact design */
+.contact {
+  border: 1px solid red;
+  width: 100%;
+  height: auto;
+}
+.contact > h1 {
+  width: 100%;
+  height: 100px;
+  color: white;
+  text-align: center;
+  margin: 20px;
+  position: relative;
+  display: grid;
+  place-items: center;
+}
+.contact > h1::before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-image: url(../images/befor.png);
+  background-size: 270px;
+  background-position-x: 0px;
+  background-repeat: no-repeat;
+  left: 50%;
+  top: 10%;
+  transform: translateX(-10%);
+  z-index: -1;
+}
+.contact .container {
+  border: 1px solid green;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+.contact .container .infos {
+  width: 100%;
+  height: 100%;
+  border: 1px solid blue;
+}
+.contact .container .infos .text {
+  width: 100%;
+  height: 60%;
+  background-color: var(--frth-color);
+}
+.contact .container .image {
+  width: 100%;
+  height: 500px;
+  display: grid;
+  place-items: center;
+  border: 1px solid yellow;
+}
+.contact .container .image img {
+  width: 60%;
+}
+/* end contact design */
+/* start footer design */
+footer {
+  width: 100%;
+  height: 100px;
+  background-color: var(--main-color);
+}
+footer .container {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+footer .container .image {
+  height: 70px;
+}
+footer .container .image img {
+  width: 130px;
+}
+footer .container p {
+  width: 100%;
+  text-align: center;
+  font-size: 18px;
+  word-spacing: 5px;
+  font-weight: 300;
+  margin-bottom: 3%;
+}
+/* end footer design */
