--- a/css/phone-style.css
+++ b/css/phone-style.css
@@ -155,57 +155,53 @@ header .container .text a {
 }
 /* end gallery design */
 .contact {
-  border: 1px solid red;
-  width: 100%;
-  height: auto;
-}
-.contact > h1 {
-  width: 100%;
-  height: 100px;
-  color: white;
-  text-align: center;
-  margin: 20px;
-  position: relative;
-  display: grid;
-  place-items: center;
-}
-.contact > h1::before {
-  content: " ";
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background-image: url(../images/befor.png);
-  background-size: 270px;
-  background-position-x: 0px;
-  background-repeat: no-repeat;
-  left: 50%;
-  top: 10%;
-  transform: translateX(-10%);
-  z-index: -1;
+  height: 400px;
 }
 .contact .container {
-  border: 1px solid green;
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
+  height: 50%;
 }
-.contact .container .infos {
-  width: 100%;
-  height: 100%;
-  border: 1px solid blue;
+.contact .container .infos{
+  width: 90%;
 }
-.contact .container .infos .text {
-  width: 100%;
-  height: 60%;
-  background-color: var(--frth-color);
+.contact .container .infos .icon i {
+  font-size: 20px;
 }
-.contact .container .image {
-  width: 100%;
-  height: 500px;
-  display: grid;
-  place-items: center;
-  border: 1px solid yellow;
+.contact .container .infos .icon a {
+  font-size: 20px;
+  font-weight: 400;
 }
-.contact .container .image img {
-  width: 60%;
+.contact .container .infos .link a {
+  width: 150px;
+  height: 50px;
+  font-size: 20px;
 }
 /* end contact design */
+/* start footer design */
+footer {
+  width: 100%;
+  margin-top: 40px;
+  height: 100px;
+  background-color: var(--main-color);
+}
+footer .container {
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+footer .container .image {
+  height: 70px;
+}
+footer .container .image img {
+  width: 100px;
+}
+footer .container p {
+  width: 100%;
+  text-align: center;
+  font-size: 15px;
+  word-spacing: 5px;
+  font-weight: 300;
+  margin-bottom: 3%;
+}
+/* end footer design */
