--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@
   -moz-box-sizing: border-box;
   margin: 0;
 }
+html{
+  scroll-behavior: smooth;
+}
 body {
   text-transform: capitalize;
   font-family: "IBM Plex Sans Arabic", sans-serif;
@@ -250,63 +253,84 @@ header .container .text a:hover {
 /* end gallery design */
 /* start contact design */
 .contact {
-  border: 1px solid red;
   width: 100%;
-  height: auto;
-}
-.contact > h1 {
-  width: 100%;
-  height: 100px;
-  color: white;
-  text-align: center;
-  margin: 20px;
-  position: relative;
-  display: grid;
-  place-items: center;
-}
-.contact > h1::before {
-  content: " ";
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background-image: url(../images/befor.png);
-  background-size: 270px;
-  background-position-x: 0px;
-  background-repeat: no-repeat;
-  left: 50%;
-  top: 10%;
-  transform: translateX(-10%);
-  z-index: -1;
+  height: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .contact .container {
-  border: 1px solid green;
+  width: 100%;
+  height: 50%;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+  background-color: var(--thrd-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.contact .container .infos{
+  width: 40%;
+  padding: 40px 20px 60px;
+  height:180%;
+  background-color: var(--main-color);
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  gap: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
-.contact .container .infos {
+.contact .container .infos .img {
   width: 100%;
-  height: 100%;
-  border: 1px solid blue;
-}
-.contact .container .infos .text {
-  width: 100%;
-  height: 60%;
-  background-color: var(--frth-color);
-}
-.contact .container .image {
-  width: 100%;
-  height: 500px;
+  height: 20%;
   display: grid;
   place-items: center;
-  border: 1px solid yellow;
 }
-.contact .container .image img {
-  width: 60%;
+.contact .container .infos .img img{
+  width: 50%;
+}
+.contact .container .infos .icon {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.contact .container .infos .icon i {
+  font-size: 25px;
+  margin-right: 20px;
+  color: white;
+}
+.contact .container .infos .icon a {
+  color: white;
+  font-size: 25px;
+}
+.contact .container .infos .icon a:hover {
+  color: var(--thrd-color);
+}
+.contact .container .infos .link {
+  width: 100%;
+  display: grid;
+  place-items: center;
+}
+.contact .container .infos .link a {
+  background-color: var(--secondary-color);
+  width: 250px;
+  height: 70px;
+  color: white;
+  display: grid;
+  place-items: center;
+  font-weight: bold;
+  letter-spacing: 3px;
+  font-size: 30px;
+  box-shadow: 4px 4px 0px var(--main-color), 8px 8px 0px var(--thrd-color);
+}
+.contact .container .infos .link a:hover{
+  box-shadow: none;
 }
 /* end contact design */
 /* start footer design */
 footer {
   width: 100%;
+  margin-top: 40px;
   height: 100px;
   background-color: var(--main-color);
 }
